<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/SummerTheme.Red"
        android:text="@string/key_clear"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_backspace"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_backspace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_bckspc"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_persent"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_persent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_persent"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_9"
        app:layout_constraintEnd_toStartOf="@id/btn_div"
        app:layout_constraintStart_toEndOf="@id/btn_backspace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_div"
        app:layout_constraintBottom_toTopOf="@id/btn_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_persent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintEnd_toStartOf="@id/btn_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/btn_clear"
        app:layout_constraintTop_toBottomOf="@id/btn_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_5"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        app:layout_constraintTop_toBottomOf="@id/btn_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_6"
        app:layout_constraintEnd_toStartOf="@id/btn_mul"
        app:layout_constraintStart_toEndOf="@id/btn_8"
        app:layout_constraintTop_toBottomOf="@id/btn_persent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_mul"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        app:layout_constraintEnd_toEndOf="@id/btn_div"
        app:layout_constraintStart_toEndOf="@id/btn_9"
        app:layout_constraintTop_toBottomOf="@id/btn_div" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintEnd_toStartOf="@id/btn_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/btn_7"
        app:layout_constraintTop_toBottomOf="@id/btn_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_2"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintStart_toEndOf="@id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/btn_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_3"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@id/btn_5"
        app:layout_constraintTop_toBottomOf="@id/btn_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="@id/btn_mul"
        app:layout_constraintStart_toEndOf="@id/btn_6"
        app:layout_constraintTop_toBottomOf="@id/btn_mul" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/btn_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintBottom_toTopOf="@id/btn_equal"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintTop_toBottomOf="@id/btn_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/key_add"
        app:layout_constraintBottom_toBottomOf="@id/btn_equal"
        app:layout_constraintEnd_toEndOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintEnd_toStartOf="@id/btn_dot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        android:layout_marginEnd="@dimen/margin_6"
        app:layout_constraintEnd_toStartOf="@id/btn_equal"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintTop_toBottomOf="@id/btn_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_equal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_equal"
        app:layout_constraintEnd_toEndOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_3" />

</androidx.constraintlayout.widget.ConstraintLayout>